k8s/deployment.yml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-service
  labels:
    app: front-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-service
  template:
    metadata:
      name: front-service
      labels:
        app: front-service
    spec:
      containers:
        - name: front-service
          image: 879381276515.dkr.ecr.ap-northeast-2.amazonaws.com/polar-msa-ecr:front
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 80
