k8s/service.yml.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
