k8s/ingress.yml.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80, "HTTPS": 443}]'
    alb.ingress.kubernetes.io/group.name: frontend
    alb.ingress.kubernetes.io/load-balancer-name: front-alb
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/subnets: subnet-0eba9bf4fcf915e31,subnet-08657494f4c5ea751
    alb.ingress.kubernetes.io/security-groups: sg-08d728ccd2317bf35

    # ➕ HTTPS 적용에 필요한 주석
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:879381276515:certificate/0dfd4e12-fcd9-4697-b202-d7093d86e8ca
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: himedia-b.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
  tls:
    - hosts:
        - himedia-b.com
      secretName: dummy-cert # 필수 아님. ACM 인증서이므로 dummy 값 사용 가능
